--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/leaflet": "^1.9.16",
+    "bootstrap": "^5.3.3",
     "leaflet": "^1.9.4",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
