--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-markercluster": "^5.0.0-rc.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-spinners": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
